# xrealair-sdk-macos

./: .gitmodules  CMakeLists.txt  README.md  build.sh  monitor.sh  release.sh
.github/workflows/: build.yml
examples/: CMakeLists.txt
examples/debug/: CMakeLists.txt
examples/debug/src/: debug.c
examples/debug_mcu/src/: debug.c
include/: device_imu.h  device_mcu.h  xrealair.h
src/: device_imu.c  device_mcu.c  hid_ids.c
